# meng-project

./: .gitignore  main.py  pyproject.toml  weehee.txt
checkpoints/: ckpt.pt  test_ckpt.pt
outputs/: synthetic_alignment_out.txt
outputs/real_probe_results/: openai-community__gpt2__learned_projection_probe.csv  openai-community__gpt2__suite_results.csv
src/benchmarks/: p1.py  ttr_synthetic.py
src/data/: tiny_shakespeare.py
src/experiments/: __init__.py  attention_learners.py  base.py  experiment_routers.py  learners.py  routers.py  tiny_shakespeare_exp.py
src/experiments/language_model_probes/: gpt2_counterfactual_suite.py  gpt2_probe_utils.py  gpt2_sequence_oracle.py  gpt2_suite.py  probe_utils.py
src/experiments/synthetic_alignment/: config.py  dataset.py  router_dataset.py  router_experiments.py  run_experiment.py  run_synth_experiment.py  synthetic_tasks.py  tasks.py
src/experiments/task_learner_routing/: dataset.py  learners.py  routers.py  run_experiment.py  tasks.py
src/models/: learners.py  transformer.py
src/tests/: transformer_test.py
src/train/: README.md  train.py  train_lm.ipynb
